<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddOrEditContactFragment">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            android:ems="10"
            android:id="@+id/editName"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/labelAddContact"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/phone_number"
            android:id="@+id/editPhone" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editName"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/enter_contact_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelAddContact"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <ImageView
            android:src="@drawable/baseline_add_black_48"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:id="@+id/imagePhoto"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/editEmail"
            app:layout_constraintStart_toEndOf="@+id/editPhone"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/labelAddContact"/>
    <TextView
            android:text="@string/add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/editPhone"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imagePhoto"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmail"
            android:hint="@string/email"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editPhone"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/comments"
            android:id="@+id/editComments"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editFacebook"/>
    <TextView
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSubmit"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editComments"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/facebook_id"
            android:ems="10"
            android:id="@+id/editFacebook" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            app:layout_constraintStart_toStartOf="@+id/editEmail"/>
</androidx.constraintlayout.widget.ConstraintLayout>